[project]
name = "nebula-server"
version = "0.1.0"
description = ""
authors = [{ name = "BiltuDas1", email = "billionto@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi (>=0.128.7,<0.129.0)", "pyjwt (>=2.11.0,<3.0.0)"]

[dependency-groups]
dev = ["python-dotenv (>=1.2.1,<2.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
